--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="white">#FFFFFFFF</color>
 
     <color name="blue_navy">#192B3C</color>
+    <color name="gray">#7ECDCDCD</color>
 </resources>
