--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -32,20 +32,30 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <ImageView
-        android:id="@+id/img_story"
-        android:layout_width="0dp"
-        android:layout_height="250dp"
+    <com.google.android.material.card.MaterialCardView
+        android:id="@+id/card_photo"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginHorizontal="48dp"
         android:layout_marginVertical="24dp"
-        android:contentDescription="@string/img_title"
-        android:scaleType="centerCrop"
-        android:visibility="visible"
-        android:transitionName="picture"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:padding="8dp"
+        app:cornerRadius="8dp"
+        app:cardElevation="4dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/iv_back"
-        tools:srcCompat="@tools:sample/backgrounds/scenic" />
+        app:layout_constraintTop_toBottomOf="@+id/iv_back">
+
+        <ImageView
+            android:id="@+id/img_story"
+            android:layout_width="match_parent"
+            android:layout_height="250dp"
+            android:contentDescription="@string/img_title"
+            android:scaleType="centerCrop"
+            android:visibility="visible"
+            android:transitionName="picture" />
+
+
+    </com.google.android.material.card.MaterialCardView>
+
 
     <TextView
         android:id="@+id/tv_name"
@@ -54,10 +64,11 @@
         android:layout_marginTop="12dp"
         android:layout_marginBottom="8dp"
         android:gravity="center"
+        android:fontFamily="@font/abhaya_libre_regular"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/img_story"
+        app:layout_constraintTop_toBottomOf="@id/card_photo"
         tools:text="name"/>
 
     <TextView
@@ -66,6 +77,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
+        android:fontFamily="@font/poppins_regular"
         android:gravity="center"
         android:textSize="24sp"
         android:textStyle="italic"
@@ -80,6 +92,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
         android:layout_marginHorizontal="24dp"
+        android:fontFamily="@font/open_sans"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_date"
